1997-12-04  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* print.h (SCM_COERCE_OUTPORT): Check that the object is a pair
	before taking the CDR. (Thanks to Harald Meland.)

	* filesys.c (scm_stat): Slightly optimized.

Wed Dec  3 12:23:06 1997  Jim Blandy  <jimb@totoro.red-bean.com>

	* ports.c (scm_close_port): Make sure the port is open before
	trying to close it.

	* guile-snarf.in: Pass args through to gcc in a way that preserves
	whitespace boundaries.  (Thanks to Greg Badros.)

1997-12-02  Tim Pierce  <twp@skepsis.com>

	* stacks.c (scm_frame_procedure): Reverse the logic in the return
	statement.  (Thanks to Doug Evans for pointing this out.)

1997-12-01  Tim Pierce  <twp@skepsis.com>

	* scmconfig.h.in: Regenerated for USCORE change in ../acconfig.h.

Sun Nov 30 11:29:18 1997  Mikael Djurfeldt  <mdj@kenneth>

	* coop-defs.h (struct coop_t): Renamed errno --> _errno to prevent
	errno macro expansion of this field name.  (errno is a C
	preprocessor macro on some systems.)

1997-11-29  Tim Pierce  <twp@skepsis.com>

	* iselect.c: Doc fix.

Sat Nov 29 01:16:53 1997  Mikael Djurfeldt  <mdj@kenneth>

	* init.c (scm_start_stack): Removed initialization of
	scm_the_last_stack_var.

	* backtrace.h: Declare scm_the_last_stack_var.

	* backtrace.c: Define scm_the_last_stack_var.

	* root.c (mark_root): Don't mark the_last_stack_var.

	* root.h (scm_root_state): Removed the_last_stack_var.

	* throw.c: Added #include "fluids.h"
	(ss_handler): `the-last-stack' is now a fluid.

	* (backtrace.h, backtrace.c, throw.c): Renamed the_last_stack_var
	--> the_last_stack_fluid.
	
	* backtrace.c: Added #include "fluids.h"
	(scm_init_backtrace): Initialize `the-last-stack' to a fluid.
	(scm_backtrace): `the-last-stack' is now a fluid.

	* init.c (scm_boot_guile_1): Moved call to scm_init_backtrace
	after scm_init_fluids.

1997-11-28  Tim Pierce  <twp@skepsis.com>

	* iselect.c: #ifdef USE_THREADS around thread-related includes.

	* dynl-dl.c (sysdep_dynl_func): Check both USCORE and