@@ -1,3 +1,10 @@
+1997-12-04  Tim Pierce  <twp@ppp39.Nantucket.net>
+
+	* fports.c (scm_fgets): Return if the last char in a chunk is
+	newline.  When fgets returns a string whose length is `size-1', it
+	is ambiguous whether a whole line was retrieved, so we must check
+	explicitly whether a line terminator is present.
+
 1997-12-04  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>
 
 	* print.h (SCM_COERCE_OUTPORT): Check that the object is a pair
